--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 </head>
 <body>
     <div class="header">Header Logo
-        <div class="menu">
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </div>
+        <ul class="menu">
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+        </ul>
     </div>
     <div class="content">
         <div class="hero-section">
