--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="header">Header Logo
-        <ul class="menu">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
-    </div>
-    <div class="content">
-        <div class="hero-section">
+    <div class="hero-section">
+        <div class="header">Header Logo
+            <ul class="menu">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+        <div class="hero-pitch">
             <div class="hero-text">This website is awesome!
                 <div class="hero-subtext">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
                 <button class="hero-button">Sign up</button>
             </div>
             <img src="./images/hero-image.jpeg" alt="hero-image-cat">
         </div>
+    </div>
+    <div class="content">
         <div class="information">
             <div class="info-title">Some random information</div>
             <div class="card">
