--- a/index.html
+++ b/index.html
@@ -24,23 +24,25 @@
         </div>
     </div>
     <div class="content">
-        <div class="information">
+        <div class="info">
             <div class="info-title">Some random information</div>
-            <div class="card">
-                <img src="./images/info-image.jpeg" alt="info-image cat">
-                <div class="info-subtext">this is some subtext under an illustration or an image</div>
-            </div>
-            <div class="card">
-                <img src="./images/info-image.jpeg" alt="info-image cat">
-                <div class="info-subtext">this is some subtext under an illustration or an image</div>
-            </div>
-            <div class="card">
-                <img src="./images/info-image.jpeg" alt="info-image cat">
-                <div class="info-subtext">this is some subtext under an illustration or an image</div>
-            </div>
-            <div class="card">
-                <img src="./images/info-image.jpeg" alt="info-image cat">
-                <div class="info-subtext">this is some subtext under an illustration or an image</div>
+            <div class="info-container">    
+                <div class="card">
+                    <img src="./images/info-image.jpeg" alt="info-image cat">
+                    <div class="info-subtext">this is some subtext under an illustration or an image</div>
+                </div>
+                <div class="card">
+                    <img src="./images/info-image.jpeg" alt="info-image cat">
+                    <div class="info-subtext">this is some subtext under an illustration or an image</div>
+                </div>
+                <div class="card">
+                    <img src="./images/info-image.jpeg" alt="info-image cat">
+                    <div class="info-subtext">this is some subtext under an illustration or an image</div>
+                </div>
+                <div class="card">
+                    <img src="./images/info-image.jpeg" alt="info-image cat">
+                    <div class="info-subtext">this is some subtext under an illustration or an image</div>
+                </div>
             </div>
         </div>
         <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
