add a lot of pink

--- a/index.html
+++ b/index.html
@@ -8,50 +8,50 @@
 </head>
 <body>
     <div class="hero-section">
-        <div class="header">Header Logo
+        <div class="header">Nails and Such
             <ul class="menu">
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="#">pricing</a></li>
+                <li><a href="#">our team</a></li>
+                <li><a href="#">portfolio</a></li>
             </ul>
         </div>
         <div class="hero-pitch">
-            <div class="hero-text">This website is awesome!
-                <div class="hero-subtext">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
-                <button class="hero-button">Sign up</button>
+            <div class="hero-text">We paint awesome nails!
+                <div class="hero-subtext">Nails are an accessory, so why not have fun with them? We strive to bring joy with each design and take pride in our client's satisfaction.</div>
+                <button class="hero-button">Color me impressed</button>
             </div>
-            <img src="./images/hero-image.jpeg" alt="hero-image-cat">
+            <img src="./images/close-up-hands-blue-background.jpg" alt="photo of painted nails">
         </div>
     </div>
     <div class="content">
         <div class="info">
-            <div class="info-title">Some random information</div>
+            <div class="info-title">About our ethics</div>
             <div class="info-container">    
                 <div class="card">
-                    <img src="./images/info-image.jpeg" alt="info-image cat">
-                    <div class="info-subtext">this is some subtext under an illustration or an image</div>
+                    <img src="./images/hand_1.png" alt="image of a hand with painted nails">
+                    <div class="info-subtext">we provide unique designs for our clients</div>
                 </div>
                 <div class="card">
-                    <img src="./images/info-image.jpeg" alt="info-image cat">
-                    <div class="info-subtext">this is some subtext under an illustration or an image</div>
+                    <img src="./images/hand_3.png" alt="image of a hand with painted nails">
+                    <div class="info-subtext">we only use safe materials and techniques</div>
                 </div>
                 <div class="card">
-                    <img src="./images/info-image.jpeg" alt="info-image cat">
-                    <div class="info-subtext">this is some subtext under an illustration or an image</div>
+                    <img src="./images/hand_4.png" alt="image of a hand with painted nails">
+                    <div class="info-subtext">we sanitize our tools before each client</div>
                 </div>
                 <div class="card">
-                    <img src="./images/info-image.jpeg" alt="info-image cat">
-                    <div class="info-subtext">this is some subtext under an illustration or an image</div>
+                    <img src="./images/hand_2.png" alt="image of a hand with painted nails">
+                    <div class="info-subtext">we support unions. u go girlz!</div>
                 </div>
             </div>
         </div>
         <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
-            <div class="author">-Thor, God of Thunder</div>
+            <div class="author">-Stella, The Beauty Fairy</div>
         </div>
         <div class="box">
             <div class="cta-text">
                 <div class="cta-header">Call to action! It's time!</div>
-                <div class="cta-subtext">Sign up for our product by clicking that button right over there.</div>
+                <div class="cta-subtext">Come and get those new fancy nails!</div>
             </div>
             <button class="cta-button">Sign up</button>
         </div>
